--- a/analiza.ipynb
+++ b/analiza.ipynb
@@ -3790,7 +3790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3818,6 +3818,19 @@
     "    return     \n",
     "search([\"Fullmetal\", \"Steins\", \"Re:Zero\"]) #Primer"
    ]
+  },
+  {
+   "source": [
+    "Slice of Life update, bom mogoče dodal kasneje. Najverjetneje ne bi veliko spremenilo, saj je večina animejev s tem žanrom že vsebovana (Slice of Life skoraj nikoli ni samostojen žanr).\n",
+    "\n",
+    "Dolgujem pa še pojasnilo glede \"Slice of Life + School Life + Romance / Comedy / Drama\" in \"Isekai\".\n",
+    "\n",
+    "*\"Slice of Life + School Life + Romance / Comedy / Drama\"* - anime brez prave zgodbe, ponavadi govori o dijaku, ki ima sicer nek cilj v življenju, vendar ni nobenih zlobnežel ipd. Govori o njemu in grupi njegovih prijatlejv in kaj počnejo vvsakdanjem življenju, s kakpnimi težavami se kot najstniki srečujejo itd. Včasih so težave malo bolj resne, takrat ima dodaten žanr Drama, včasih pa gre zgolj za zbadanje in komedične scene - takrat dobi žanr Comedy. Všasih pa tudi govori o najstniški ljubezni. Take vrste aimeji so v zlati sredini, ker ni stvari, ki bi se zgodila, da bi lahko anime ocenil z manj kot 7, po drugi strani pa tudi se ne zgodi nič, za kar bi ji lahko dal več kot 8.\n",
+    "\n",
+    "*Isekai* - je tip animeja, kjer je glavni gralec iz takpnega ali drugačnega razloga prerojen v drugi svet (\"dobesedni pomen besede 'isekai' je drugi svet). Ponavadi je to fantazijski svet pol magije itd. Glavni junak postane pustolovec in ponavad ima kakšno super moč, da ga naredi veliko bojšega od drugih. Podobno kot pri zgornjem primeru. Stvari se dogajajo ampak so bodisi predvdljive bodisi neopazne. Tako da na koncu koncev ne moreš oceniti aimeja z več kot 8 in manj kot 7."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
