--- a/analiza.ipynb
+++ b/analiza.ipynb
@@ -192,7 +192,7 @@
     "kjer:\n",
     "\n",
     "$v$ - število uporabnikov, ki je glasovalo za anime A ($\\ast$),\n",
-    "$S$ - povprešna ocena uporabnikov animeja A,\n",
+    "$S$ - povprečna ocena uporabnikov animeja A,\n",
     "$m$ - minimalno število glasov, ki je potrebno, da se ocena sploh izračuna,\n",
     "$C$ - povprečna ocena vseh Anime in Manga podatkov s strani MAL\n",
     "\n",
